<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ItemEditActivity"
    >

    <include
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:labelFor="@+id/section_spinner"
            android:text="@string/item_section"
            android:textSize="@dimen/font_size"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/section_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <EditText
                android:id="@+id/section_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_section"
                android:visibility="gone"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:targetApi="o" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:labelFor="@+id/quantity_text"
            android:text="@string/item_quantity"
            android:textSize="@dimen/font_size"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3">
        </TextView>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/quantity_minus"
            android:text="@string/quantity_minus"
            android:textStyle="normal|bold" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:id="@+id/quantity_plus"
            android:text="@string/quantity_plus"
            android:textStyle="normal|bold" />
    </LinearLayout>

</LinearLayout>