<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <include
        layout="@layout/list_separator"
        android:id="@+id/separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_row_height"
        android:layout_below="@+id/separator"
        android:background="#ff558b2f"
        android:id="@+id/item_swipe_left"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_add_24dp"
            android:layout_marginEnd="@dimen/add_button_margin"
            android:contentDescription="@string/item_add" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_row_height"
        android:layout_below="@+id/separator"
        android:background="#d50000"
        android:id="@+id/item_swipe_right"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete_24dp"
            android:layout_marginStart="@dimen/add_button_margin"
            android:contentDescription="@string/item_delete" />

    </RelativeLayout>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_row_height"
        android:layout_below="@+id/separator"
        android:background="#ffffff"
        android:id="@+id/item_main"
        tools:ignore="Overdraw">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:lines="1"
            android:text="@string/missing_item"
            android:textSize="24sp"
            android:paddingStart="6sp"
            android:paddingEnd="6sp"
            tools:ignore="Overdraw" />

    </RelativeLayout>

</RelativeLayout>
